--- a/dom/base/test/mochitest.ini
+++ b/dom/base/test/mochitest.ini
@@ -242,6 +242,7 @@ support-files =
   file_webaudioLoop.html
   file_webaudioLoop2.html
   file_pluginAudio.html
+  noaudio.webm
   referrer_helper.js
   referrer_testserver.sjs
   script_postmessages_fileList.js
@@ -299,6 +300,7 @@ skip-if = buildapp == 'mulet' || buildapp == 'b2g' || toolkit == 'android' || e1
 [test_named_frames.html]
 [test_navigator_resolve_identity.html]
 [test_navigator_language.html]
+[test_noAudioNotification.html]
 [test_openDialogChromeOnly.html]
 [test_open_null_features.html]
 skip-if = (buildapp == 'b2g' && toolkit != 'gonk') # Fails on b2g-desktop, tracked in bug 1011874
