Bug 1124649 - Part 3 - Add invalid PKP header web console tests. r=jryans

--- a/browser/devtools/webconsole/test/browser.ini
+++ b/browser/devtools/webconsole/test/browser.ini
@@ -94,6 +94,7 @@ support-files =
   test-file-location.js
   test-filter.html
   test-for-of.html
+  test_hpkp-invalid-headers.sjs
   test_hsts-invalid-headers.sjs
   test-iframe-762593-insecure-form-action.html
   test-iframe-762593-insecure-frame.html
@@ -325,6 +326,7 @@ skip-if = e10s # Bug 1042253 - webconsole tests disabled with e10s
 [browser_webconsole_execution_scope.js]
 [browser_webconsole_for_of.js]
 [browser_webconsole_history.js]
+[browser_webconsole_hpkp_invalid-headers.js]
 [browser_webconsole_hsts_invalid-headers.js]
 skip-if = buildapp == 'mulet' || e10s # Bug 1042253 - webconsole e10s tests
 [browser_webconsole_input_field_focus_on_panel_select.js]
