Bug 1180584 - Support multiple badges on the Hamburger menu button. r=markh

--- a/browser/base/content/test/general/browser.ini
+++ b/browser/base/content/test/general/browser.ini
@@ -509,3 +509,4 @@ support-files =
 support-files =
   readerModeArticle.html
 [browser_domFullscreen_fullscreenMode.js]
+[browser_menuButtonBadgeManager.js]
