--- a/mobile/android/tests/browser/chrome/chrome.ini
+++ b/mobile/android/tests/browser/chrome/chrome.ini
@@ -1,6 +1,7 @@
 [DEFAULT]
 skip-if = os != 'android'
 support-files =
+  basic_article.html
   desktopmode_user_agent.sjs
   devicesearch.xml
   video_controls.html
@@ -18,4 +19,5 @@ support-files =
 [test_migrate_ui.html]
 [test_network_manager.html]
 [test_offline_page.html]
+[test_reader_view.html]
 [test_resource_substitutions.html]
