Bug 1184186 - Convert robocop testJavaAddons to mochitest-chrome; r=nalexander

--- a/mobile/android/tests/browser/chrome/chrome.ini
+++ b/mobile/android/tests/browser/chrome/chrome.ini
@@ -12,4 +12,5 @@ support-files =
 [test_desktop_useragent.html]
 [test_device_search_engine.html]
 [test_home_provider.html]
+[test_java_addons.html]
 [test_resource_substitutions.html]
