Bug 1184186 - Convert robocop testOfflinePage to mochitest-chrome; r=mfinkle

--- a/mobile/android/tests/browser/chrome/chrome.ini
+++ b/mobile/android/tests/browser/chrome/chrome.ini
@@ -3,6 +3,7 @@ skip-if = os != 'android'
 support-files =
   desktopmode_user_agent.sjs
   devicesearch.xml
+  video_controls.html
 
 [test_about_logins.html]
 [test_accounts.html]
@@ -16,4 +17,5 @@ support-files =
 [test_jni.html]
 [test_migrate_ui.html]
 [test_network_manager.html]
+[test_offline_page.html]
 [test_resource_substitutions.html]
