--- a/mobile/android/tests/browser/chrome/chrome.ini
+++ b/mobile/android/tests/browser/chrome/chrome.ini
@@ -14,4 +14,5 @@ support-files =
 [test_home_provider.html]
 [test_java_addons.html]
 [test_jni.html]
+[test_migrate_ui.html]
 [test_resource_substitutions.html]
