--- a/mobile/android/tests/browser/chrome/chrome.ini
+++ b/mobile/android/tests/browser/chrome/chrome.ini
@@ -11,4 +11,5 @@ support-files =
 [test_debugger_server.html]
 [test_desktop_useragent.html]
 [test_device_search_engine.html]
+[test_home_provider.html]
 [test_resource_substitutions.html]
