Bug 1184186 - Convert robocop testJNI to mochitest-chrome; r=nalexander

--- a/mobile/android/tests/browser/chrome/chrome.ini
+++ b/mobile/android/tests/browser/chrome/chrome.ini
@@ -13,4 +13,5 @@ support-files =
 [test_device_search_engine.html]
 [test_home_provider.html]
 [test_java_addons.html]
+[test_jni.html]
 [test_resource_substitutions.html]
