Bug 1184186 - Convert robocop testRestrictedProfiles to mochitest-chrome; r=mfinkle

--- a/mobile/android/tests/browser/chrome/chrome.ini
+++ b/mobile/android/tests/browser/chrome/chrome.ini
@@ -21,3 +21,4 @@ support-files =
 [test_offline_page.html]
 [test_reader_view.html]
 [test_resource_substitutions.html]
+[test_restricted_profiles.html]
