Bug 1184186 - Convert robocop testVideoDiscovery to mochitest-chrome; r=mfinkle

--- a/mobile/android/tests/browser/chrome/chrome.ini
+++ b/mobile/android/tests/browser/chrome/chrome.ini
@@ -7,6 +7,7 @@ support-files =
   session_formdata_sample.html
   simpleservice.xml
   video_controls.html
+  video_discovery.html
 
 [test_about_logins.html]
 [test_accounts.html]
@@ -27,3 +28,4 @@ support-files =
 [test_session_form_data.html]
 [test_shared_preferences.html]
 [test_simple_discovery.html]
+[test_video_discovery.html]
