Bug 1184186 - Convert robocop testSessionFormData to mochitest-chrome; r=mfinkle

--- a/mobile/android/tests/browser/chrome/chrome.ini
+++ b/mobile/android/tests/browser/chrome/chrome.ini
@@ -4,6 +4,7 @@ support-files =
   basic_article.html
   desktopmode_user_agent.sjs
   devicesearch.xml
+  session_formdata_sample.html
   video_controls.html
 
 [test_about_logins.html]
@@ -22,3 +23,4 @@ support-files =
 [test_reader_view.html]
 [test_resource_substitutions.html]
 [test_restricted_profiles.html]
+[test_session_form_data.html]
