Bug 1184186 - Convert robocop testWebChannel to mochitest-chrome; r=nalexander

--- a/mobile/android/tests/browser/robocop/robocop.ini
+++ b/mobile/android/tests/browser/robocop/robocop.ini
@@ -109,6 +109,8 @@ skip-if = android_version == "10" || android_version == "18"
 # [testVkbOverlap.java] # see bug 907274
 
 # Using JavascriptTest
+# (If your test can be written entirely in Javascript, consider writing
+# it as a chrome test instead. See mobile/android/tests/browser/chrome.)
 [testBrowserDiscovery.java]
 # disabled on 4.3, bug 1158384
 skip-if = android_version == "18"
@@ -130,7 +132,6 @@ skip-if = android_version == "18"
 [testVideoControls.java]
 # disabled on Android 2.3 due to video playback issues, bug 1088038; on 4.3, bug 1098532
 skip-if = android_version == "10" || android_version == "18"
-[testWebChannel.java]
 
 # Used for Talos, please don't use in mochitest
 #[testCheck2.java]
