--- a/mobile/android/tests/browser/chrome/chrome.ini
+++ b/mobile/android/tests/browser/chrome/chrome.ini
@@ -8,6 +8,7 @@ support-files =
   simpleservice.xml
   video_controls.html
   video_discovery.html
+  web_channel.html
 
 [test_about_logins.html]
 [test_accounts.html]
@@ -29,3 +30,4 @@ support-files =
 [test_shared_preferences.html]
 [test_simple_discovery.html]
 [test_video_discovery.html]
+[test_web_channel.html]
