Bug 1184186 - Convert robocop testSharedPreferences to mochitest-chrome; r=nalexander

--- a/mobile/android/tests/browser/chrome/chrome.ini
+++ b/mobile/android/tests/browser/chrome/chrome.ini
@@ -24,3 +24,4 @@ support-files =
 [test_resource_substitutions.html]
 [test_restricted_profiles.html]
 [test_session_form_data.html]
+[test_shared_preferences.html]
