Bug 1184186 - Convert robocop testSimpleDiscovery to mochitest-chrome; r=mfinkle

--- a/mobile/android/tests/browser/chrome/chrome.ini
+++ b/mobile/android/tests/browser/chrome/chrome.ini
@@ -5,6 +5,7 @@ support-files =
   desktopmode_user_agent.sjs
   devicesearch.xml
   session_formdata_sample.html
+  simpleservice.xml
   video_controls.html
 
 [test_about_logins.html]
@@ -25,3 +26,4 @@ support-files =
 [test_restricted_profiles.html]
 [test_session_form_data.html]
 [test_shared_preferences.html]
+[test_simple_discovery.html]
