--- a/dom/crypto/test/mochitest.ini
+++ b/dom/crypto/test/mochitest.ini
@@ -2,11 +2,13 @@
 # Bug 1010743 - Re-enable WebCrypto tests on b2g
 skip-if = (buildapp == 'b2g')
 support-files =
+  file_indexedDB.html
   test-array.js
   test-vectors.js
   test_WebCrypto.css
   util.js
 
+[test_indexedDB.html]
 [test_WebCrypto.html]
 [test_WebCrypto_DH.html]
 [test_WebCrypto_ECDH.html]
