--- a/configure.in
+++ b/configure.in
@@ -3791,8 +3791,6 @@ MOZ_CONTENT_SANDBOX=
 MOZ_GMP_SANDBOX=
 MOZ_SANDBOX=1
 MOZ_BINARY_EXTENSIONS=
-MOZ_ADDON_SIGNING=
-MOZ_REQUIRE_SIGNING=
 
 case "$target_os" in
     mingw*)
@@ -8609,8 +8607,12 @@ AC_SUBST(MOZ_POST_DSO_LIB_COMMAND)
 AC_SUBST(MOZ_POST_PROGRAM_COMMAND)
 AC_SUBST(MOZ_LINKER_EXTRACT)
 
-AC_SUBST(MOZ_ADDON_SIGNING)
-AC_SUBST(MOZ_REQUIRE_SIGNING)
+if test "$MOZ_ADDON_SIGNING" = 1; then
+  AC_DEFINE(MOZ_ADDON_SIGNING)
+fi
+if test "$MOZ_REQUIRE_ADDON_SIGNING" = 1; then
+  AC_DEFINE(MOZ_REQUIRE_ADDON_SIGNING)
+fi
 
 if test -n "$MOZ_BINARY_EXTENSIONS"; then
   AC_DEFINE(MOZ_BINARY_EXTENSIONS)
