Backed out changeset 292d13beeb7b (bug 1186522) for Gaia unit test bustage.

--- a/configure.in
+++ b/configure.in
@@ -3791,6 +3791,8 @@ MOZ_CONTENT_SANDBOX=
 MOZ_GMP_SANDBOX=
 MOZ_SANDBOX=1
 MOZ_BINARY_EXTENSIONS=
+MOZ_ADDON_SIGNING=
+MOZ_REQUIRE_SIGNING=
 
 case "$target_os" in
     mingw*)
@@ -8607,12 +8609,8 @@ AC_SUBST(MOZ_POST_DSO_LIB_COMMAND)
 AC_SUBST(MOZ_POST_PROGRAM_COMMAND)
 AC_SUBST(MOZ_LINKER_EXTRACT)
 
-if test "$MOZ_ADDON_SIGNING" = 1; then
-  AC_DEFINE(MOZ_ADDON_SIGNING)
-fi
-if test "$MOZ_REQUIRE_ADDON_SIGNING" = 1; then
-  AC_DEFINE(MOZ_REQUIRE_ADDON_SIGNING)
-fi
+AC_SUBST(MOZ_ADDON_SIGNING)
+AC_SUBST(MOZ_REQUIRE_SIGNING)
 
 if test -n "$MOZ_BINARY_EXTENSIONS"; then
   AC_DEFINE(MOZ_BINARY_EXTENSIONS)
