--- a/mobile/android/gradle/base/build.gradle
+++ b/mobile/android/gradle/base/build.gradle
@@ -76,8 +76,9 @@ dependencies {
 
     if (mozconfig.substs.MOZ_NATIVE_DEVICES) {
         compile 'com.android.support:mediarouter-v7:22.2.1'
-        compile 'com.google.android.gms:play-services-base:7.8.0'
-        compile 'com.google.android.gms:play-services-cast:7.8.0'
+        compile 'com.google.android.gms:play-services-basement:8.1.0'
+        compile 'com.google.android.gms:play-services-base:8.1.0'
+        compile 'com.google.android.gms:play-services-cast:8.1.0'
     }
 
     compile project(':branding')
